--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/semantic/dist/semantic.min.css">
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="%PUBLIC_URL%/semantic/dist/semantic.min.js"></script>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/pixyll.css" type="text/css">
+
+    <!-- Fonts -->
+
+    <link href='//fonts.googleapis.com/css?family=Merriweather:900,900italic,300,300italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Lato:900,300' rel='stylesheet' type='text/css'>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
