--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/pixyll.css" type="text/css">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 
     <!-- Fonts -->
 
@@ -34,6 +35,6 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    
+
   </body>
 </html>
